--- a/vignettes/knockofftools.Rmd
+++ b/vignettes/knockofftools.Rmd
@@ -95,12 +95,11 @@ The function `knockoff.statistics` takes as main input `y`, `X`, and `type` (def
 Y = X \beta^{(k)} + \tilde{X}_k \tilde{\beta}^{(k)} + \varepsilon,
 \end{align}
 for each of the $k=1,\dots,M$ knockoff copies. Then finally calculate (for each knockoff $k$) the corresponding knockoff (feature) statistics $W^{(k)}_j = |\beta_j^{(k)}|-|\tilde{\beta}_j^{(k)}|$. By changing the `M` parameter of `knockoff.statistics` we can calculate multiple knockoff statistics in parallel:
-```{r, eval=FALSE}
+```{r, message=FALSE}
 set.seed(123)
 X <- generate_X(n=2000, p=30, p_b=0, cov_type = "cov_ar1", rho=0.5)
 y <- generate_y(X = X, p_nn=10, 0.1)
-W <- knockoff.statistics(y, X, M=31)
-head(W)
+W <- knockoff.statistics(y, X, M=10)
 ```
 The output `W` is a data.frame of knockoff statistics across the `M` knockoff replicates.
 
@@ -109,7 +108,7 @@ Since the `knockoff.statistics` may take long to run for a single knockoff copy,
 ## Variable selection based on multiple knockoff statistics
 
 To calculate which variables will be selected for each of these knockoff statistics we use the `variable.selections` function. This function takes the knockoff statistics `W` as input and additionally specifies the `error.type="fdr"` (default), `"pfer"` (per family error error), or `"kfwer"` (k-familywise error rate) and the corresponding nominal error level. 
-```{r, eval=FALSE}
+```{r}
 S = variable.selections(W, level = 0.1, error.type="fdr")
 head(S$selected)
 S$stable.variables
@@ -119,7 +118,7 @@ In a nutshell the function will both calculate individual variable selections (f
 ## Heatmap of multiple variable selections
 
 In order to evaluate the robustness of the knockoff selection procedure we can visualize a heatmap of the selections across the knockoff replicates. 
-```{r, eval=FALSE}
+```{r, fig.width=7.15, fig.height=4.5, fig.fullwidth=TRUE}
 plot(S)
 ```
 By default the stable variables will be colored in red. We apply co-clustering of the rows and columns of the heatmap and then order the blocks according to increasing mean number of selections. This helps with aesthetics, but also helps visualize the most important variables that should tend towards the top of the heatmap.
